Fixed button overlapping

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -13,6 +13,7 @@ nav {
   box-shadow: 3px 2px 4px 3px #ccc;
   position: fixed;
   top: 0;
+  z-index:1000;
   width: 100%;
 }
 
